Fix error msg wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,6 @@ input[type="search"]::-webkit-search-results-decoration {
 .errorContainer h1 {
   color: red;
   font-size: 2.5rem;
-  min-width: 70vw;
 }
 .errorContainer h1::first-letter {
   text-transform: uppercase;
